Refactor top nav

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     <div class="background-cover" style="background-image: url('assets/images/hero-balkans.jpg');">
         <div class="inner">
             <div class="top-nav">
-                <a href="/" class="logo">Visit the Balkans</a>
-                <div id="nav-links">
-                    <a href="#"><img class="top-nav flag" src="assets/images/ico-croatia.png">Croatia</a>
-                    <a href="#"><img class="top-nav flag" src="assets/images/ico-bosnia.png">Bosnia &amp; Herzegovina</a>
-                    <a href="#"><img class="top-nav flag" src="assets/images/ico-serbia.png">Serbia</a>
-                    <a href="#"><img class="top-nav flag" src="assets/images/ico-montenegro.png">Montenegro</a>
-                    <a href="#"><img class="top-nav flag" src="assets/images/ico-macedonia.png">North Macedonia</a>
+                <div>
+                    <a href="/" class="logo">Visit the Balkans</a>
                 </div>
-                <a href="javascript:void(0);" onclick="showMenu()">
-                    <span id="menu-icon"></span>
-                </a>
+                <div class="top-nav right">
+                    <div id="nav-links">
+                        <a href="#"><img class="top-nav flag" src="assets/images/ico-croatia.png">Croatia</a>
+                        <a href="#"><img class="top-nav flag" src="assets/images/ico-bosnia.png">Bosnia &amp; Herzegovina</a>
+                        <a href="#"><img class="top-nav flag" src="assets/images/ico-serbia.png">Serbia</a>
+                        <a href="#"><img class="top-nav flag" src="assets/images/ico-montenegro.png">Montenegro</a>
+                        <a href="#"><img class="top-nav flag" src="assets/images/ico-macedonia.png">North Macedonia</a>
+                    </div>
+                    <a id="menu" href="javascript:void(0);" onclick="showMenu()">Menu</a>
+                </div>
             </div>
             <div class="hero">
                 <div>
