Update font path in CSS file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <div>
                         <h1>Adventure Awaits You</h1>
                         <p>
-                            Ready to embark on this extraordinary adventure? Download our comprehensive brochure now and start planning your dream getaway.
+                            Ready to embark on this extraordinary adventure? Download our comprehensive brochure now and
+                            start planning your dream getaway.
                         </p>
                         <a class="button button-primary" href="#">Download Brochure</a>
                     </div>
@@ -53,77 +54,79 @@
                     <div class="info-container">
                         <a href="croatia/">
                             <img class="info-image" src="assets/images/hero-croatia.jpg">
-                            <h3 class="subheading">Croatia
-            </h2>
-            <p class="info-subtext">Coastal gem with a <br>Mediterranean charm.</p>
-            </a>
-        </div>
-        <div class="info-container">
-            <a href="bosnia/">
-                <img class="info-image" src="assets/images/hero-bosnia.jpg">
-                <h3 class="subheading">Bosnia &amp; Herzegovina</h2>
-            </a>
-            <p class="info-subtext">Timeless tales etched <br>in nature.</p>
-        </div>
-        <div class="info-container">
-            <a href="serbia/">
-                <img src="assets/images/hero-serbia.jpg" class="info-image">
-                <h3 class="subheading">Serbia</h2>
-                    <p class="info-subtext">A mix of cultures and <br>vibrant urban life.</p>
-            </a>
-        </div>
-        <div class="info-container">
-            <a href="montenegro/">
-                <img class="info-image" src="assets/images/hero-montenegro.jpg">
-                <h3 class="subheading">Montenegro</h2>
-                    <p class="info-subtext">Nature's masterpiece on <br>the Adriatic.</p>
-            </a>
-        </div>
-        <div class="info-container">
-            <a href="macedonia/">
-                <img class="info-image" src="assets/images/hero-macedonia.jpg">
-                <h3 class="subheading">North Macedonia</h2>
-                    <p class="info-subtext">A blend of cultures <br>in scenic beauty.</p>
-            </a>
-        </div>
-    </div>
-    </div>
-
-    <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
-        <div class="inner">
-            <div class="quote">
-                "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in Croatia to the
-                rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture captivated me.
-                What truly sets the Balkans apart is the warmth of its people. I left with cherished memories and
-                newfound friends."
-                <span class="quote author">-Gabriel, Sydney</span>
-            </div>
-            <div class="cta">
-                <div>
-                    <div class="cta-content">
-                        <div class="cta-heading">
-                            What are you waiting for?
-                        </div>
-                        <div class="cta-subtext">
-                            Discover the wonders of the Balkans, and let your wanderlust lead the way. Your adventure begins
-                            here. Don't miss out – download our brochure to get started!
-                        </div>
+                            <h3 class="subheading">Croatia</h3>
+                            <p class="info-subtext">Coastal gem with a <br>Mediterranean charm.</p>
+                        </a>
                     </div>
-                </div>
-                <div>
-                    <div class="cta-button">
-                        <a class="button" href="#">
-                            Download Brochure
+                    <div class="info-container">
+                        <a href="bosnia/">
+                            <img class="info-image" src="assets/images/hero-bosnia.jpg">
+                            <h3 class="subheading">Bosnia &amp; Herzegovina</h3>
+                        </a>
+                        <p class="info-subtext">Timeless tales etched <br>in nature.</p>
+                    </div>
+                    <div class="info-container">
+                        <a href="serbia/">
+                            <img src="assets/images/hero-serbia.jpg" class="info-image">
+                            <h3 class="subheading">Serbia</h3>
+                            <p class="info-subtext">A mix of cultures and <br>vibrant urban life.</p>
+                        </a>
+                    </div>
+                    <div class="info-container">
+                        <a href="montenegro/">
+                            <img class="info-image" src="assets/images/hero-montenegro.jpg">
+                            <h3 class="subheading">Montenegro</h3>
+                            <p class="info-subtext">Nature's masterpiece on <br>the Adriatic.</p>
+                        </a>
+                    </div>
+                    <div class="info-container">
+                        <a href="macedonia/">
+                            <img class="info-image" src="assets/images/hero-macedonia.jpg">
+                            <h3 class="subheading">North Macedonia</h3>
+                            <p class="info-subtext">A blend of cultures <br>in scenic beauty.</p>
                         </a>
                     </div>
                 </div>
+        </div>
+
+        <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
+            <div class="inner">
+                <div class="quote">
+                    "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in Croatia to
+                    the
+                    rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture captivated
+                    me.
+                    What truly sets the Balkans apart is the warmth of its people. I left with cherished memories and
+                    newfound friends."
+                    <span class="quote author">-Gabriel, Sydney</span>
+                </div>
+                <div class="cta">
+                    <div>
+                        <div class="cta-content">
+                            <div class="cta-heading">
+                                What are you waiting for?
+                            </div>
+                            <div class="cta-subtext">
+                                Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
+                                adventure begins
+                                here. Don't miss out – download our brochure to get started!
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="cta-button">
+                            <a class="button" href="#">
+                                Download Brochure
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer">
-        &copy; Visit the Balkans 2023
-    </div>
+        <div class="footer">
+            &copy; Visit the Balkans 2023
+        </div>
     </div>
 </body>
 
