--- a/index.html
+++ b/index.html
@@ -49,44 +49,46 @@
         </div>
 
         <div class="info">
-            <h2>Discover the Balkans</h1>
+            <div class="inner">
+            <h2>Discover the Balkans</h2>
                 <div class="info-content">
                     <div class="info-container">
                         <a href="croatia/">
                             <img class="info-image" src="assets/images/hero-croatia.jpg">
-                            <h3 class="subheading">Croatia</h3>
+                            <h3>Croatia</h3>
                             <p class="info-subtext">Coastal gem with a <br>Mediterranean charm.</p>
                         </a>
                     </div>
                     <div class="info-container">
                         <a href="bosnia/">
                             <img class="info-image" src="assets/images/hero-bosnia.jpg">
-                            <h3 class="subheading">Bosnia &amp; Herzegovina</h3>
+                            <h3>Bosnia &amp; Herzegovina</h3>
                         </a>
                         <p class="info-subtext">Timeless tales etched <br>in nature.</p>
                     </div>
                     <div class="info-container">
                         <a href="serbia/">
                             <img src="assets/images/hero-serbia.jpg" class="info-image">
-                            <h3 class="subheading">Serbia</h3>
+                            <h3>Serbia</h3>
                             <p class="info-subtext">A mix of cultures and <br>vibrant urban life.</p>
                         </a>
                     </div>
                     <div class="info-container">
                         <a href="montenegro/">
                             <img class="info-image" src="assets/images/hero-montenegro.jpg">
-                            <h3 class="subheading">Montenegro</h3>
+                            <h3>Montenegro</h3>
                             <p class="info-subtext">Nature's masterpiece on <br>the Adriatic.</p>
                         </a>
                     </div>
                     <div class="info-container">
                         <a href="macedonia/">
                             <img class="info-image" src="assets/images/hero-macedonia.jpg">
-                            <h3 class="subheading">North Macedonia</h3>
+                            <h3>North Macedonia</h3>
                             <p class="info-subtext">A blend of cultures <br>in scenic beauty.</p>
                         </a>
                     </div>
                 </div>
+            </div>
         </div>
 
         <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
