Refactor info section

--- a/index.html
+++ b/index.html
@@ -48,45 +48,45 @@
             </div>
         </div>
 
-        <div class="info">
+        <div class="featured">
             <div class="inner">
             <h2>Discover the Balkans</h2>
-                <div class="info-content">
-                    <div class="info-container">
-                        <a href="croatia/">
-                            <img class="info-image" src="assets/images/hero-croatia.jpg">
-                            <h3>Croatia</h3>
-                            <p class="info-subtext">Coastal gem with a <br>Mediterranean charm.</p>
-                        </a>
-                    </div>
-                    <div class="info-container">
-                        <a href="bosnia/">
-                            <img class="info-image" src="assets/images/hero-bosnia.jpg">
-                            <h3>Bosnia &amp; Herzegovina</h3>
-                        </a>
-                        <p class="info-subtext">Timeless tales etched <br>in nature.</p>
-                    </div>
-                    <div class="info-container">
-                        <a href="serbia/">
-                            <img src="assets/images/hero-serbia.jpg" class="info-image">
-                            <h3>Serbia</h3>
-                            <p class="info-subtext">A mix of cultures and <br>vibrant urban life.</p>
-                        </a>
-                    </div>
-                    <div class="info-container">
-                        <a href="montenegro/">
-                            <img class="info-image" src="assets/images/hero-montenegro.jpg">
-                            <h3>Montenegro</h3>
-                            <p class="info-subtext">Nature's masterpiece on <br>the Adriatic.</p>
-                        </a>
-                    </div>
-                    <div class="info-container">
-                        <a href="macedonia/">
-                            <img class="info-image" src="assets/images/hero-macedonia.jpg">
-                            <h3>North Macedonia</h3>
-                            <p class="info-subtext">A blend of cultures <br>in scenic beauty.</p>
-                        </a>
-                    </div>
+                <div class="info">
+                    <a href="croatia/">
+                        <div class="info thumbnail">
+                            <img src="assets/images/hero-croatia.jpg">
+                        </div>
+                        <h3>Croatia</h3>
+                        <p>Coastal gem with a Mediterranean charm.</p>
+                    </a>
+                    <a href="bosnia/">
+                        <div class="info thumbnail">
+                            <img src="assets/images/hero-bosnia.jpg">
+                        </div>
+                        <h3>Bosnia &amp; Herzegovina</h3>
+                        <p>Timeless tales etched in nature.</p>
+                    </a>
+                    <a href="serbia/">
+                        <div class="info thumbnail">
+                            <img src="assets/images/hero-serbia.jpg">
+                        </div>
+                        <h3>Serbia</h3>
+                        <p>A mix of cultures and vibrant urban life.</p>
+                    </a>
+                    <a href="montenegro/">
+                        <div class="info thumbnail">
+                            <img src="assets/images/hero-montenegro.jpg">
+                        </div>
+                        <h3>Montenegro</h3>
+                        <p>Nature's masterpiece on the Adriatic.</p>
+                    </a>
+                    <a href="macedonia/">
+                        <div class="info thumbnail">
+                            <img src="assets/images/hero-macedonia.jpg">
+                        </div>
+                        <h3>North Macedonia</h3>
+                        <p>A blend of cultures in scenic beauty.</p>
+                    </a>
                 </div>
             </div>
         </div>
