Replace div elements with semantic HTML

--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
     <div id="wrapper">
         <div class="background-cover" style="background-image: url('assets/images/hero-balkans.jpg');">
             <div class="inner">
-                <div class="top-nav">
-                    <div>
-                        <a href="/" class="logo">Visit the Balkans</a>
-                    </div>
+                <header class="top-nav">
+                   <a href="/" class="logo">Visit the Balkans</a>
                     <div class="top-nav right">
-                        <div id="nav-links">
-                            <a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a>
-                            <a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
-                                Herzegovina</a>
-                            <a href="serbia/"><img src="assets/images/ico-serbia.png">Serbia</a>
-                            <a href="montenegro/"><img src="assets/images/ico-montenegro.png">Montenegro</a>
-                            <a href="macedonia/"><img src="assets/images/ico-macedonia.png">North Macedonia</a>
-                        </div>
+                        <menu id="nav-links">
+                            <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
+                            <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
+                                Herzegovina</a></li>
+                            <li><a href="serbia/"><img src="assets/images/ico-serbia.png">Serbia</a></li>
+                            <li><a href="montenegro/"><img src="assets/images/ico-montenegro.png">Montenegro</a></li>
+                            <li><a href="macedonia/"><img src="assets/images/ico-macedonia.png">North Macedonia</a></li>
+                        </menu>
                         <a id="menu" href="javascript:void(0);" onclick="showMenu()">Menu</a>
                     </div>
-                </div>
+                </header>
                 <div class="hero">
                     <div>
                         <h1>Adventure Awaits You</h1>
@@ -53,38 +51,38 @@
             <h2>Discover the Balkans</h2>
                 <div class="info">
                     <a href="croatia/">
-                        <div class="info thumbnail">
-                            <img src="assets/images/hero-croatia.jpg">
-                        </div>
-                        <h3>Croatia</h3>
+                        <figure>
+                            <img src="assets/images/hero-croatia.jpg" class="info thumbnail">
+                            <figcaption>Croatia</figcaption>
+                        </figure>
                         <p>Coastal gem with a Mediterranean charm.</p>
                     </a>
                     <a href="bosnia/">
-                        <div class="info thumbnail">
-                            <img src="assets/images/hero-bosnia.jpg">
-                        </div>
-                        <h3>Bosnia &amp; Herzegovina</h3>
+                        <figure>
+                            <img src="assets/images/hero-bosnia.jpg" class="info thumbnail">
+                            <figcaption>Bosnia &amp; Herzegovina</figcaption>
+                        </figure>
                         <p>Timeless tales etched in nature.</p>
                     </a>
                     <a href="serbia/">
-                        <div class="info thumbnail">
-                            <img src="assets/images/hero-serbia.jpg">
-                        </div>
-                        <h3>Serbia</h3>
+                        <figure>
+                            <img src="assets/images/hero-serbia.jpg" class="info thumbnail">
+                            <figcaption>Serbia</figcaption>
+                        </figure>
                         <p>A mix of cultures and vibrant urban life.</p>
                     </a>
                     <a href="montenegro/">
-                        <div class="info thumbnail">
-                            <img src="assets/images/hero-montenegro.jpg">
-                        </div>
-                        <h3>Montenegro</h3>
+                        <figure>
+                            <img src="assets/images/hero-montenegro.jpg" class="info thumbnail">
+                            <figcaption>Montenegro</figcaption>
+                        </figure>
                         <p>Nature's masterpiece on the Adriatic.</p>
                     </a>
                     <a href="macedonia/">
-                        <div class="info thumbnail">
-                            <img src="assets/images/hero-macedonia.jpg">
-                        </div>
-                        <h3>North Macedonia</h3>
+                        <figure>
+                            <img src="assets/images/hero-macedonia.jpg" class="info thumbnail">
+                            <figcaption>North Macedonia</figcaption>
+                        </figure>
                         <p>A blend of cultures in scenic beauty.</p>
                     </a>
                 </div>
@@ -93,42 +91,34 @@
 
         <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
             <div class="inner">
-                <div class="quote">
-                    "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in Croatia to
-                    the
-                    rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture captivated
-                    me.
-                    What truly sets the Balkans apart is the warmth of its people. I left with cherished memories and
-                    newfound friends."
-                    <span class="quote author">-Gabriel, Sydney</span>
-                </div>
+                <figure class="quote">
+                    <blockquote>
+                        "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in Croatia to
+                        the
+                        rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture captivated
+                        me.
+                        What truly sets the Balkans apart is the warmth of its people. I left with cherished memories and
+                        newfound friends."
+                    </blockquote>
+                    <figcaption class="quote author">-Gabriel, Sydney</figcaption>
+                </figure>
                 <div class="cta">
                     <div>
-                        <div class="cta-content">
-                            <div class="cta-heading">
-                                What are you waiting for?
-                            </div>
-                            <div class="cta-subtext">
-                                Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
-                                adventure begins
-                                here. Don't miss out – download our brochure to get started!
-                            </div>
-                        </div>
+                        <h2>What are you waiting for?</h2>
+                        <p>
+                            Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
+                            adventure begins
+                            here. Don't miss out – download our brochure to get started!
+                        </p>
                     </div>
-                    <div>
-                        <div class="cta-button">
-                            <a class="button" href="#">
-                                Download Brochure
-                            </a>
-                        </div>
-                    </div>
+                    <a class="button" href="#">
+                        Download Brochure
+                    </a>
                 </div>
             </div>
         </div>
 
-        <div class="footer">
-            &copy; Visit the Balkans 2023
-        </div>
+        <footer>Copyright &copy; Visit the Balkans 2023</footer>
     </div>
 </body>
 
