Fix hero responsiveness

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="wrapper">
         <div class="background-cover" style="background-image: url('assets/images/hero-balkans.jpg');">
             <div class="inner">
-                <header class="top-nav">
-                   <a href="/" class="logo">Visit the Balkans</a>
-                    <div class="top-nav right">
-                        <menu id="nav-links">
+                <header id="banner">
+                    <a href="/" id="logo">Visit the Balkans</a>
+                    <div>
+                        <menu id="navigation">
                             <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
                             <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
                                 Herzegovina</a></li>
@@ -27,7 +27,7 @@
                             <li><a href="montenegro/"><img src="assets/images/ico-montenegro.png">Montenegro</a></li>
                             <li><a href="macedonia/"><img src="assets/images/ico-macedonia.png">North Macedonia</a></li>
                         </menu>
-                        <a id="menu" href="javascript:void(0);" onclick="showMenu()">Menu</a>
+                        <button id="menu" onclick="showMenu()">Menu</button>
                     </div>
                 </header>
                 <div class="hero">
@@ -39,9 +39,9 @@
                         </p>
                         <a class="button button-primary" href="#">Download Brochure</a>
                     </div>
-                    <div class="hero right">
+                    <figure>
                         <img src="assets/images/map-balkans.png" alt="Map of the Balkans">
-                    </div>
+                    </figure>
                 </div>
             </div>
         </div>
