--- a/croatia/index.html
+++ b/croatia/index.html
@@ -6,10 +6,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="assets/css/reset.css" rel="stylesheet">
-        <link href="assets/css/style.css" rel="stylesheet">
-        <title>Visit the Balkans</title>
-        <link rel="icon" href="assets/images/map-balkans.png">
+        <link href="../assets/css/reset.css" rel="stylesheet">
+        <link href="../assets/css/style.css" rel="stylesheet">
+        <title>Croatia Travel Guide - Visit the Balkans</title>
+        <link rel="icon" href="../assets/images/map-balkans.png">
     </head>
 <body>
 
@@ -19,16 +19,16 @@
         <!-- Side Navigation -->
         <menu id="nav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
-            <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
+            <li><a href="croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+            <li><a href="bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                     Herzegovina</a></li>
-            <li><a href="serbia/"><img src="assets/images/ico-serbia.png">Serbia</a></li>
-            <li><a href="montenegro/"><img src="assets/images/ico-montenegro.png">Montenegro</a></li>
-            <li><a href="macedonia/"><img src="assets/images/ico-macedonia.png">North Macedonia</a></li>
+            <li><a href="serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
+            <li><a href="montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
+            <li><a href="macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
         </menu>
 
         <!-- Background Image -->
-        <div class="background-cover" style="background-image: url('assets/images/hero-balkans.jpg');">
+        <div class="background-cover" style="background-image: url('../assets/images/hero-balkans.jpg');">
 
             <!-- Inner Wrapper -->
             <div class="inner">
@@ -52,7 +52,7 @@
                         <a class="button button-primary" href="#">Download Brochure</a>
                     </div>
                     <figure>
-                        <img src="assets/images/map-balkans.png" alt="Map of the Balkans">
+                        <img src="../assets/images/map-balkans.png" alt="Map of the Balkans">
                     </figure>
                 </section>
             </div>
@@ -69,35 +69,35 @@
                 <div>
                     <a href="croatia/">
                         <article>
-                            <img src="assets/images/hero-croatia.jpg">
+                            <img src="../assets/images/hero-croatia.jpg">
                             <h3>Croatia</h3>
                             <p>Coastal gem with a Mediterranean charm.</p>
                         </article>
                     </a>
                     <a href="bosnia/">
                         <article>
-                            <img src="assets/images/hero-bosnia.jpg">
+                            <img src="../assets/images/hero-bosnia.jpg">
                             <h3>Bosnia &amp; Herzegovina</h3>
                             <p>Timeless tales etched in nature.</p>
                         </article>
                     </a>
                     <a href="serbia/">
                         <article>
-                            <img src="assets/images/hero-serbia.jpg">
+                            <img src="../assets/images/hero-serbia.jpg">
                             <h3>Serbia</h3>
                             <p>A mix of cultures and vibrant urban life.</p>
                         </article>
                     </a>
                     <a href="montenegro/">
                         <article>
-                            <img src="assets/images/hero-montenegro.jpg">
+                            <img src="../assets/images/hero-montenegro.jpg">
                             <h3>Montenegro</h3>
                             <p>Nature's masterpiece on the Adriatic.</p>
                         </article>
                     </a>
                     <a href="macedonia/">
                         <article>
-                            <img src="assets/images/hero-macedonia.jpg">
+                            <img src="../assets/images/hero-macedonia.jpg">
                             <h3>North Macedonia</h3>
                             <p>A blend of cultures in scenic beauty.</p>
                         </article>
@@ -107,7 +107,7 @@
         </main>
 
         <!-- Background Image -->
-        <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
+        <div class="background-cover" style="background-image: url('../assets/images/quotes-balkans.jpg');">
 
             <!-- Inner Wrapper -->
             <div class="inner">
@@ -151,6 +151,6 @@
 </body>
 
 <!-- Sidebar Navigation Script -->
-<script src="assets/js/script.js"></script>
+<script src="../assets/js/script.js"></script>
 
 </html>
